# martinovykavarny.cz

./: .gitignore  Dockerfile  README.md  build.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: package.yml
static/: main.css  main.js  manifest.json  mapbox-sdk.min.js  worker.js
templates/: admin.jinja.html  base.html  base.jinja.html  index.jinja.html  offline.jinja.html
