[tool.poetry]
name = "martinovykavarny-cz"
version = "0.1.0"
description = "Martin's coffee rating website"
authors = ["Martin Rosenberg <nitram.rosenberg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.95.0", extras = ["all"]}
jinja2 = "^3.1.2"
tortoise-orm = {version = "^0.19.3", extras = ["asyncpg"]}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
