[tool.poetry]
name = "martinovykavarny-cz"
version = "0.1.0"
description = "Martin's coffee rating website"
authors = ["Martin Rosenberg <nitram.rosenberg@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.111.0", extras = ["standard"] }
jinja2 = "^3.1.2"
tortoise-orm = { version = "^0.21.4", extras = ["asyncpg"] }
python-multipart = "^0.0.9"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
selenium = "^4.8.3"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
